<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/camera_menu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/menuTheme"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_menu_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/imageGuideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_menu_toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imageGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <ImageButton
        android:id="@+id/camera_menu_sticker_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="fitCenter"
        android:src="@drawable/sticker_icon2"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/button_bottomGuideline"
        app:layout_constraintEnd_toStartOf="@id/camera_menu_3d_button"
        app:layout_constraintStart_toEndOf="@id/button_startGuideline"
        app:layout_constraintTop_toBottomOf="@id/button_topGuideline" />

    <ImageButton
        android:id="@+id/camera_menu_3d_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/threed_icon"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/button_bottomGuideline"
        app:layout_constraintEnd_toStartOf="@id/camera_menu_sketch_button"
        app:layout_constraintStart_toEndOf="@id/camera_menu_sticker_button"
        app:layout_constraintTop_toBottomOf="@id/button_topGuideline" />

    <ImageButton
        android:id="@+id/camera_menu_sketch_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="fitCenter"
        android:src="@drawable/sketch_icon2"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/button_bottomGuideline"
        app:layout_constraintEnd_toStartOf="@id/button_endGuideline"
        app:layout_constraintStart_toEndOf="@id/camera_menu_3d_button"
        app:layout_constraintTop_toBottomOf="@id/button_topGuideline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sticker"
        app:layout_constraintTop_toBottomOf="@id/camera_menu_sticker_button"
        app:layout_constraintStart_toStartOf="@id/camera_menu_sticker_button"
        app:layout_constraintEnd_toEndOf="@id/camera_menu_sticker_button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3d_sticker"
        app:layout_constraintTop_toBottomOf="@id/camera_menu_3d_button"
        app:layout_constraintStart_toStartOf="@id/camera_menu_3d_button"
        app:layout_constraintEnd_toEndOf="@id/camera_menu_3d_button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sketch"
        app:layout_constraintTop_toBottomOf="@id/camera_menu_sketch_button"
        app:layout_constraintStart_toStartOf="@id/camera_menu_sketch_button"
        app:layout_constraintEnd_toEndOf="@id/camera_menu_sketch_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>